[gd_scene load_steps=3 format=3 uid="uid://c0f4filiu4kdf"]

[ext_resource type="Script" path="res://Screens/CombatScreen/HandCard/HandCard.gd" id="1_fdggm"]
[ext_resource type="PackedScene" uid="uid://dvji02e64f5v2" path="res://Scenes/Card/Card.tscn" id="2_h4plu"]

[node name="HandCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdggm")

[node name="Card" parent="." instance=ExtResource("2_h4plu")]
offset_left = -75.0
offset_top = -705.0
offset_right = 75.0
offset_bottom = -495.0
mouse_default_cursor_shape = 2

[connection signal="gui_input" from="Card" to="." method="_on_card_gui_input"]
[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
